api changes: added list of banned users and unban user usecases
