# api/swagger.yml
@@ -326,6 +326,29 @@ paths:
         "500":
           $ref: "#/components/responses/internalErrorResponse"
 
+  /chats/{chatId}/members/banned:
+    get:
+      summary: get banned members for chat
+      operationId: listBannedUsers
+      x-ogen-operation-group: Chats
+      tags:
+        - chats
+      parameters:
+        - $ref: "#/components/parameters/chatId"
+      responses:
+        "200":
+          $ref: "#/components/responses/bannedMembersResponse"
+        "400":
+          $ref: "#/components/responses/invalidInputResponse"
+        "401":
+          $ref: "#/components/responses/unauthenticatedResponse"
+        "403":
+          $ref: "#/components/responses/unauthorizedResponse"
+        "404":
+          $ref: "#/components/responses/chatNotFoundResponse"
+        "500":
+          $ref: "#/components/responses/internalErrorResponse"
+
   /chats/{chatId}/members/{userId}/ban:
     post:
       summary: ban user in chat
@@ -338,7 +361,7 @@ paths:
         - $ref: "#/components/parameters/userId"
       responses:
         "204":
-          description: "user banned"
+          description: user banned
         "400":
           $ref: "#/components/responses/invalidInputResponse"
         "401":
@@ -347,6 +370,34 @@ paths:
           $ref: "#/components/responses/unauthorizedResponse"
         "404":
           description: chat or member not found
+        "409":
+          description: user has already been banned
+        "500":
+          $ref: "#/components/responses/internalErrorResponse"
+
+  /chats/{chatId}/members/{userId}/unban:
+    post:
+      summary: Unban user in chat
+      operationId: UnbanUser
+      x-ogen-operation-group: Chats
+      tags:
+        - chats
+      parameters:
+        - $ref: "#/components/parameters/chatId"
+        - $ref: "#/components/parameters/userId"
+      responses:
+        "204":
+          description: user banned
+        "400":
+          $ref: "#/components/responses/invalidInputResponse"
+        "401":
+          $ref: "#/components/responses/unauthenticatedResponse"
+        "403":
+          $ref: "#/components/responses/unauthorizedResponse"
+        "404":
+          description: chat or member not found
+        "409":
+          description: user is not banned
         "500":
           $ref: "#/components/responses/internalErrorResponse"
 
@@ -740,6 +791,20 @@ components:
             type: array
             items:
               $ref: "./schemas.yml#/components/schemas/member"
+
+    bannedMembersResponse:
+      description: banned members response
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                user_id:
+                  $ref: "./schemas.yml#/components/schemas/userId"
+              required:
+                - user_id
 
     roleResponse:
       description: role info response
